<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appname"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:width="220dp"
        android:layout_marginTop="60dp"
        android:textSize="42sp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />
    <EditText
        android:id="@+id/id_email"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="8dp"
        android:hint="Email"
        android:textSize="16sp"
        android:background="@drawable/edittextbackground"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        tools:ignore="RtlSymmetry"
        android:autofillHints=""
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/id_password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="8dp"
        android:hint="password"
        android:inputType="numberPassword"
        android:background="@drawable/edittextbackground"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:gravity="start"
            android:layout_gravity="start"
            android:text="@string/don_have_an_account"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="170dp"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/register"
            android:text="Register"
            android:clickable="true"
            android:textColor="@color/design_default_color_secondary"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="60dp">
    <Button
        android:id="@+id/login"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:layout_width="116dp"
        android:layout_height="52dp"/>
    <ProgressBar
        android:id="@+id/main_activity_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_margin="20sp"
        android:padding="15sp"
        android:theme="@style/progressBarYellow"
        />
</FrameLayout>
</LinearLayout>